# LivePush

app/: build.gradle
app/src/androidTest/java/com/demo/avpush/: Demo.java  ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ndk_push.cpp  queue.cpp
app/src/main/java/com/demo/avpush/: MainActivity.java
app/src/main/java/com/demo/avpush/jni/: LiveStateChangeListener.java  PushNative.java
app/src/main/java/com/demo/avpush/params/: AudioParam.java  VideoParam.java
app/src/main/java/com/demo/avpush/pusher/: AudioPusher.java  IPusher.java  LivePusher.java  VideoPusher.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/demo/avpush/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
